--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -4,6 +4,10 @@
     <button mat-raised-button appGoogleSignin>
       Login With Google
     </button>
+
+    <h5>OR</h5>
+
+    <app-email-login></app-email-login>
   </div>
   <div *ngIf="afAuth.authState | async as user" class="logout">
     <p>
