--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,10 +66,10 @@ $firestarter-theme: mat-dark-theme(
 
 /* You can add global styles to this file, and also import other style files */
 
-html,
-body {
-  height: 100%;
-}
+// html,
+// body {
+//   height: 100%;
+// }
 body {
   margin: 0;
   font-family: sofia-pro, sans-serif;
